# AEB-stellantis-project

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  index.html  prj.conf
.github/: pull_request_template.md
.github/workflows/: ci.yml  publish-index.yml  sil.yml  vv-can.yml  vv-decision.yml  vv-perception.yml  vv-pid-alert.yml  vv-uds.yml
doc/task_c/: task_c_design.tex
docker/: Dockerfile.vv
docs/: Fault_Injection_Findings.html  index.html
include/: aeb_alert.h  aeb_can.h  aeb_config.h  aeb_core.h  aeb_fsm.h  aeb_perception.h  aeb_pid.h  aeb_ttc.h  aeb_types.h  aeb_uds.h
reports/full_suite/: coverage_report.txt
reports/full_suite/logs/: gcov_aeb_alert.txt  gcov_aeb_can.txt  gcov_aeb_core.txt  gcov_aeb_fsm.txt  gcov_aeb_perception.txt  gcov_aeb_pid.txt  gcov_aeb_ttc.txt  gcov_aeb_uds.txt
reports/sil/: README.md
reports/vv_can/: README.md  Relatorio_Consolidado_VV_CAN.tex  functional_tests_can.csv
reports/vv_can/coverage_mcdc/: aeb_can.c.gcov  can.info  cmd_line  coverage.json  coverage.xml  coverage_summary.txt  gcov_summary.txt  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
reports/vv_can/misra/: cppcheck.xml  cppcheck_can.xml
reports/vv_decision/: README.md  functional_tests_decision.csv
reports/vv_decision/coverage_mcdc/: aeb_fsm.c.gcov  aeb_ttc.c.gcov  coverage.xml  coverage_summary.txt  gcov_summary.txt
reports/vv_decision/misra/: cppcheck_decision.xml
reports/vv_perception/: README.md  functional_tests_perception.csv
reports/vv_perception/coverage_mcdc/: aeb_perception.c.gcov  gcov_summary.txt  gcov_summary_combined.txt  gcov_summary_mcdc.txt
reports/vv_perception/misra/: cppcheck_perception.xml
reports/vv_pid_alert/: README.md  functional_tests_pid_alert.csv  generate_memory_report.py
reports/vv_pid_alert/coverage_mcdc/: aeb_alert.c.gcov  aeb_pid.c.gcov  coverage.xml  gcov_summary.txt  report.aeb_alert.c.73b11a990d7445a7e6cb7b9f09c6e461.html  report.aeb_alert.c.f6d6daba30fed9937d05c4113c04bb0b.html  report.aeb_pid.c.64278fe439155ec985175b9e0156a4ff.html  report.aeb_pid.c.bd23142be47d4144a9754dfba651bf01.html  report.functions.html  report.html
reports/vv_pid_alert/misra/: cppcheck_pid_alert.xml
reports/vv_uds/: README.md  functional_tests_uds.csv
reports/vv_uds/coverage_mcdc/: aeb_uds.c.gcov  gcov_summary.txt
reports/vv_uds/misra/: cppcheck_uds.xml
scripts/: run_full_suite.sh  wrap_fault.py  wrap_memory.sh
sil/: .gitattributes  README.md  docker-compose.yml  start_sil.sh
sil/aeb_gazebo/: CMakeLists.txt  README.md  launcher.sh  package.xml  run.sh
sil/aeb_gazebo/config/: scenarios.yaml
sil/aeb_gazebo/launch/: aeb_scenario.launch.py  aeb_with_dashboard.launch.py
sil/aeb_gazebo/src/: aeb_node.py  can_codec.py  can_tcp_client.py  dashboard_node.py  dashboard_overlay.py  perception_node.py  scenario_controller.py  target_vehicle_controller.py
sil/aeb_gazebo/worlds/: aeb_highway.world
sil/docker/: Dockerfile.api  Dockerfile.canbridge  Dockerfile.gazebo  Dockerfile.zephyr
sil/docker/api/: scenario_api.py  uds_client.py
sil/docker/canbridge/: bridge.py
sil/docker/canbus/: can_tcp_server.py
sil/docker/dashboard/: index.html
sil/docker/nginx/: nginx.conf
sil/zephyr_aeb/: CMakeLists.txt  patch_fsm.py  prj.conf
sil/zephyr_aeb/boards/: native_sim.overlay
sil/zephyr_aeb/src/: can_hal.h  can_hal_zephyr.c  main.c
src/: main.c
src/communication/: aeb_can.c  aeb_uds.c
src/decision/: aeb_fsm.c  aeb_ttc.c
src/execution/: aeb_alert.c  aeb_pid.c
src/integration/: aeb_core.c
src/perception/: aeb_perception.c
stubs/: can_hal.c  can_hal.h  can_hal_test.h  zephyr_stub.c  zephyr_stub.h
tests/: test_alert.c  test_alert_fault.c  test_alert_mcdc.c  test_can.c  test_can_fault.c  test_can_struct.c  test_decision.c  test_decision_fault.c  test_decision_mcdc.c  test_integration.c  test_perception.c  test_perception_fault.c  test_perception_mcdc.c  test_pid.c  test_pid_fault.c  test_pid_mcdc.c  test_smoke.c  test_uds.c  test_uds_fault.c
tools/: sim_manual.c
vv_can/development/coverage_html/: cmd_line  coverage.info  coverage_can.info  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
vv_can/development/coverage_mcdc/: aeb_can.c.gcov  aeb_can.gcda  aeb_can.gcno  gcov_summary.txt  test_can_cov  test_can_cov-can_hal.gcda  test_can_cov-can_hal.gcno  test_can_cov-test_can.gcda  test_can_cov-test_can.gcno  test_can_fault_cov  test_can_fault_cov-can_hal.gcda  test_can_fault_cov-can_hal.gcno  test_can_fault_cov-test_can_fault.gcda  test_can_fault_cov-test_can_fault.gcno  test_can_struct_cov  test_can_struct_cov-can_hal.gcda  test_can_struct_cov-can_hal.gcno  test_can_struct_cov-test_can_struct.gcda  test_can_struct_cov-test_can_struct.gcno
vv_can/development/fault_html/: index.html
vv_can/development/fault_injection/: test_can_fault
vv_can/development/memory_html/: index.html
vv_can/development/memory_safety/: test_can_fault_san  test_can_fault_val  test_can_san  test_can_val
vv_can/development/misra/: cppcheck_can.xml
vv_can/development/misra_html/: 0.html  index.html  stats.html
vv_decision/development/coverage_html/: cmd_line  coverage.info  coverage_decision.info  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
vv_decision/development/coverage_mcdc/: aeb_fsm.c.gcov  aeb_ttc.c.gcov  coverage.json  coverage.xml  coverage_summary.txt  gcov_summary.txt  report.aeb_fsm.c.e13271f114c5fec561a98435cdd5e30b.html  report.aeb_ttc.c.c9c0de4e9d96306f13834a70ad8b3493.html  report.functions.html  report.html  test_decision  test_decision-aeb_fsm.gcda  test_decision-aeb_fsm.gcno  test_decision-aeb_ttc.gcda  test_decision-aeb_ttc.gcno  test_decision-test_decision.gcda  test_decision-test_decision.gcno  test_decision_mcdc  test_decision_mcdc-aeb_fsm.gcda  test_decision_mcdc-aeb_fsm.gcno  test_decision_mcdc-aeb_ttc.gcda  test_decision_mcdc-aeb_ttc.gcno  test_decision_mcdc-test_decision_mcdc.gcda  test_decision_mcdc-test_decision_mcdc.gcno
vv_decision/development/fault_html/: index.html
vv_decision/development/misra_html/: 0.html  (+5 more)
(+258 files in other folders)
